# libeys3d

./: .gitmodules  LICENSE  README.md
wrappers/opencv/: CMakeLists.txt  README.md  build.sh  readme.txt  release.sh  run_eys3d_opencv.sh
wrappers/opencv/eSPDI/: eSPDI_def.h  eSPDI_version.h  libeSPDI_X86_64.so.0498510e  libeSPDI_X86_64.so.unity0498510e  libunity_wrapper.so.e444a8a
wrappers/opencv/eSPDI/DepthFilter/armhf_32/include/: DepthmapFilter.h
wrappers/opencv/include/: ColorPaletteGenerator.h  DebugCPP.hpp  FrameGrabber.h  GeneralWrapper.h  ModeConfig.h  PlyWriter.h  main.h  pointcloud.h
wrappers/opencv/opencv_libs/opencv3.4.2_QT_GL/include/opencv2/: cvconfig.h
wrappers/opencv/opencv_libs/opencv3.4.2_QT_GL/lib/: libopencv_calib3d.so.3.4.2  libopencv_features2d.so.3.4.2  libopencv_flann.so.3.4.2  libopencv_highgui.so.3.4.2  libopencv_ml.so.3.4.2  libopencv_objdetect.so.3.4.2  libopencv_shape.so.3.4.2  libopencv_stitching.so.3.4.2  libopencv_superres.so.3.4.2  libopencv_video.so.3.4.2  libopencv_videoio.so.3.4.2  libopencv_videostab.so.3.4.2  libopencv_viz.so.3.4  libopencv_viz.so.3.4.2
wrappers/opencv/opencv_libs/opencv3.4.2_QT_GL/lib/pkgconfig/: opencv.pc
wrappers/opencv/opencv_libs/opencv3.4.2_QT_GL/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
wrappers/opencv/opencv_libs/opencv3.4.2_gtk/include/opencv2/: cvconfig.h
wrappers/opencv/opencv_libs/opencv3.4.2_gtk/lib/: libopencv_calib3d.so.3.4.2  libopencv_features2d.so.3.4.2  libopencv_flann.so.3.4.2  libopencv_highgui.so.3.4.2  libopencv_ml.so.3.4.2  libopencv_objdetect.so.3.4.2  libopencv_shape.so.3.4.2  libopencv_stitching.so.3.4.2  libopencv_superres.so.3.4.2  libopencv_video.so.3.4.2  libopencv_videoio.so.3.4.2  libopencv_videostab.so.3.4.2  libopencv_viz.so.3.4.2
wrappers/opencv/opencv_libs/opencv3.4.2_gtk/lib/pkgconfig/: opencv.pc
wrappers/opencv/opencv_libs/opencv3.4.2_gtk/share/OpenCV/: OpenCVModules-release.cmake
wrappers/opencv/src/: main.cpp
wrappers/python/libeYs3D/: CMakeLists.txt  run_test.sh
wrappers/python/libeYs3D/cmake/modules/: FindUDev.cmake
wrappers/python/libeYs3D/src/: EYS3DSystem.cpp  EYS3DSystem.h  macros.h  main.cpp  utils.cpp
wrappers/python/libeYs3D/src/DMPreview_utility/: ColorPaletteGenerator.cpp  ModeConfig.cpp  ModeConfigOptions.cpp  ModeConfigOptions.h  RegisterSettings.cpp  utImageProcessingUtility.cpp
wrappers/python/libeYs3D/src/base/synchronization/: MessageChannel.cpp
wrappers/python/libeYs3D/src/base/threads/: Async.cpp  FunctorThread.cpp  ThreadStore.cpp  Thread_pthread.cpp
wrappers/python/libeYs3D/src/devices/: CameraDevice.cpp  CameraDevice_8036.cpp  CameraDevice_8037.cpp  CameraDevice_8052.cpp  CameraDevice_8052.h  CameraDevice_8053.cpp  CameraDevice_8062.cpp  CameraDevice_Hypatia.cpp  IMUDevice.cpp  IMUDevice_8062.cpp  MemoryAllocator.cpp  RegisterReadWriteController.cpp
wrappers/python/libeYs3D/src/devices/model/: CameraDeviceProperties.cpp  DepthAccuracyOptions.cpp  DepthFilterOptions.cpp  IRProperty.cpp  RegisterReadWriteOptions.cpp
wrappers/python/libeYs3D/src/pybind11/: init_IMU.cpp  init_IRproperty.cpp  init_accuracy.cpp  init_def.cpp  init_depthfilter.cpp  init_device.cpp  init_frame.cpp  init_modeConfig.cpp  init_pcframe.cpp  init_plyWriter.cpp  init_property.cpp  init_register.cpp  init_system.cpp  python.cpp
wrappers/python/libeYs3D/src/sensors/: IMUDataProducer.cpp  SensorData.cpp  SensorDataProducer.cpp
wrappers/python/libeYs3D/src/video/: ColorFrameProducer.cpp  DepthFrameProducer.cpp  DepthFrameProducer.h  Frame.cpp  FrameProducer.cpp  PCFrame.cpp  PCFrameProducer.cpp  PCFrameProducer.h  coders.cpp  pc_coders.cpp
wrappers/python/libeYs3D/wrapper/python/: loop_check.sh  run_demo.sh  run_record_playback.sh
wrappers/python/libeYs3D/wrapper/python/eYs3Dcli/: run_cli.sh
wrappers/python/libeYs3D/wrapper/python/eys3d/: __init__.py  cameraProperty.py  config.py  device.py  eys3d_def.py  irProperty.py  pipeline.py  register.py
wrappers/python/libeYs3D/wrapper/python/sample_code/: accuracy_demo.py  callback_demo.py  cv_demo.py  demo.py  pc_demo.py  record_playback.py
wrappers/python/libeYs3D/wrapper/python/test/: test_eYs3DLib_8053.py  test_eYs3DLib_8062.py  utils.py
wrappers/ros/eys3d_wrapper/: CMakeLists.txt  CommonDefs.mk  LICENSE  Makefile  eys3d_depth-config.cmake.in  roslaunch_node.sh
wrappers/ros/eys3d_wrapper/cmake/: Common.cmake  DetectCXX11.cmake  DetectJPEG.cmake  DetectOpenCV.cmake  FindeSPDI.cmake  IncludeGuard.cmake  Summary.cmake
wrappers/ros/eys3d_wrapper/include/eys3d_depth/stubs/: global_config.h.in
wrappers/ros/eys3d_wrapper/scripts/: cpplint.sh  init.sh  init_tools.sh  open.sh  permissions.sh  version.sh
wrappers/ros/eys3d_wrapper/scripts/common/: detect.sh  echo.sh  host.sh  mkdir.sh  string.sh
wrappers/ros/eys3d_wrapper/scripts/config/: eys3d_depth-8036.rules
wrappers/ros/eys3d_wrapper/src/eys3d_depth/: camera.cpp  types_data.cpp  utils.cpp
wrappers/ros/eys3d_wrapper/src/eys3d_depth/data/: channels.cpp  channels.h  hid.h  hid_linux.cpp  types_internal.h
wrappers/ros/eys3d_wrapper/src/eys3d_depth/device/: RegisterSettings.cpp  RegisterSettings.h  color_palette_generator.cpp  (+16 more)
wrappers/ros/robot_code/eys3d_robot_base/: CMakeLists.txt  README.md  package.xml
wrappers/ros/robot_code/eys3d_robot_base/env/: install.sh  robobase.rules  rplidar.rules
wrappers/ros/robot_code/eys3d_robot_base/include/: Velocities.h  riki_base.h
wrappers/ros/robot_code/eys3d_robot_base/launch/: auto_slam.launch  bringup.launch  camera.launch  cartographer_slam.launch  exploration.launch  eys3d_dm_preview.launch  hector_slam.launch  hectormapping.launch  karto_slam.launch  lidar_slam.launch  move_base.launch  multi_goals.launch  navigate.launch  navigate_multi.launch
wrappers/ros/robot_code/eys3d_robot_base/maps/: frames.gv  house.pgm  map.bag.pbstream  map.pgm  map.yaml
wrappers/ros/robot_code/eys3d_robot_base/rviz/: auto_slam.rviz  multi_goal.rviz  navigate.rviz  odometry.rviz  slam.rviz
wrappers/ros/robot_code/eys3d_robot_base/script/: patrol_nav.py  show_mark.py
(+492 files in other folders)
